--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,3 +2,15 @@
 .slots {
     width: 600px;
 }
+
+.success-msg {
+    padding: 10px 20px;
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+
+.error-msg {
+    padding: 10px 20px;
+    color: #D8000C;
+    background-color: #FFD2D2;
+}
